Mon Jul 14 16:43:20 2003  Tim Janik  <timj@gtk.org>

	* sfiprimitives.[hc]: added sfi_seq_from_cstrv(), a variant of
	sfi_seq_from_strv() for const gchar**.

	* sfiglue.[hc]: changed gchar** returns to const gchar** returns
	where apropriate.

	* sfigluecodec.c: fixed sequence reference count leak.

	* sfithreads.c: sched_yield() is not available on NetBSD, reported
	by collver1@comcast.net.

	* toyprof-mem.c:
	* toyprof.c: fix pointless gcc warnings.

	* toyprof.h: special case toyprof code for GLIBC >= 2.2, since we
	use _r_debug.

Tue Jun 24 23:22:58 2003  Tim Janik  <timj@gtk.org>

	* sfidl.cc: allocate structures with g_new0() in shallow_copy(),
	so we don't oeverwrite fields with already initialized contents
	and leak substructures.
	also free the array holding element pointers when freeing sequencs.
	
	* sficomport.c (sfi_com_port_destroy): don't forget to destroy port->scanner.

Mon Jun 23 20:38:13 2003  Tim Janik  <timj@gtk.org>

	* sficomport.[hc]: added sfi_com_port_reap_child() and fields holding
	the exit states of the reaped child, implemented child reaping and
	SIGKILL fallback.
	fixed write buffer allocation and write buffer queueing.
	implemented >blocking< in receive routine which was simply missing
	since never triggered on fast machines. IO_BOTTLE_NECK can be defined
	to a small value now to trigger the code on fast machines.

	* sficomwire.c (sfi_com_spawn_async): don't auto-reap children, if
	we need auto-reaping again, we can add a function variant.

Sun Jun  8 19:56:11 2003  Tim Janik  <timj@gtk.org>

	* sfistore.[hc]: error cosmetics.

Sun Jun  8 17:59:56 2003  Tim Janik  <timj@gtk.org>

	* sfiserial.c: fixup superfluous newlines.

	* sfistore.[hc]:
	(sfi_rstore_new):
	(sfi_rstore_parse_param):
	(sfi_rstore_ensure_bin_offset):
	(sfi_rstore_get_bin_offset):
	(sfi_rstore_parse_binary): fixed up binary appendix position handling.
	(sfi_rstore_parse_until): marged parse_all() and parse_rest() into this.
	(sfi_rstore_input_fd): fixup file name.