@@ -1,3 +1,7 @@
+Mon Jul 14 16:59:25 2003  Tim Janik  <timj@gtk.org>
+
+	* sficomport.c: guard against systems not having ERESTART.
+
 Mon Jul 14 16:43:20 2003  Tim Janik  <timj@gtk.org>
 
 	* sfiprimitives.[hc]: added sfi_seq_from_cstrv(), a variant of
